--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,12 +29,17 @@ jobs:
         run: |
           quarto render readme.qmd --to gfm --output README.md
         
+      - name: Render os_usage.qmd as static HTML
+        run: |
+          quarto render os_usage.qmd --to html --output os_usage.html
+
       - name: Commit README.md
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
-          git diff-index --quiet HEAD || git commit -m "Update README.md from readme.qmd"
+          git add os_usage.html
+          git diff-index --quiet HEAD || git commit -m "feat: update os_usage.html"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
