fix: add install R and add to PATH for GitHub actions

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,12 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: LATEST
-          
+      
+      - name: Install R
+        run: sudo apt-get install -y r-base
+        
+      - name: Add R to PATH
+        run: echo "/usr/local/bin" >> $GITHUB_PATH
           
       - name: Install R dependencies
         run: |
